--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,4 +11,8 @@
 @import 'blocks/header.scss';
 @import 'blocks/buttons';
 @import 'blocks/second';
+@import 'blocks/consultation';
+@import 'blocks/titles';
+@import 'blocks/forms';
+
 
