review section and all adaptation

--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -77,7 +77,19 @@
 		.feed-form{
 			margin-top: 23px;
 		}
+	.carousel{
+		height: 500px;
+		.container{
+			width: 650px;
+		}
+		.carousel__inner{
+			width: 650px;
+		}
+
 	}
+		
+	}
+
 @media (max-width: 767px){
 	.promo{
 		height: 420px;
@@ -269,6 +281,73 @@
 	}
 	
 }
+@media (max-width: 991px){
+	.carousel{
+		height: 600px;
+		.container{
+			width: 650px;
+		}
+		.carousel__inner{
+			position: relative;
+			width: 600px;
+			img{
+				width: 100%;
+			}
+		}
+	}
+	.catalog{
+		margin-bottom: -60px;
+		.catalog__content{
+			justify-content: center;
+		}
+		.catalog-item{
+			margin-left: 10px;
+			margin-right: 10px;
+		}
+	}
+	.review{
+		.container{
+			width: 650px;
+			.title{
+				font-size: 20px;
+			}
+			.review__peoples{
+				width: 650px;
+				margin-top: 30px;
+				.review_people{
+					margin-bottom: 30px;
+					img{
+						width: 140px;
+            			height: 140px;
+					}
+					.review_people-descr{
+						h2{
+							font-size: 14px;
+							}
+						h3{
+							font-size: 12px;
+							}
+						span{
+							margin-top: 5px;
+							display: block;
+							font-weight: 300;
+							font-size: 13px;
+							line-height: 18px;
+							color: #0D0D0D;
+							}
+					}
+
+				}
+			}
+		}
+
+
+	}	
+
+
+}
+
+
 @media (max-width: 767px){
 	.consultation{
 		height: 370px;
@@ -306,7 +385,79 @@
 			color: #ffffff;
 			font-size: 14px;
 		}
-	}		
+	}
+	.carousel{
+		height: 500px;
+		.container{
+			width: 500px;
+		}
+		.carousel__inner{
+			position: relative;
+			width: 430px;
+			img{
+				width: 100%;
+			}
+		}
+	}
+	.catalog{
+		.title{
+			font-size: 20px;
+			margin-bottom: -20px;
+		}
+		.catalog__tabs{
+			.catalog__tab{
+				width: 160px;
+				height: 40px;
+				font-size: 16px;
+				line-height: 36px;
+			}
+		}
+		.catalog__content{
+			.catalog-item{
+				width: 260px;
+			}
+		}
+	}
+	.review{
+		.container{
+			width: 500px;
+			.title{
+				font-size: 20px;
+			}
+			.review__peoples{
+				width: 500px;
+				margin-top: 30px;
+				.review_people{
+					margin-bottom: 30px;
+					img{
+						width: 140px;
+            			height: 140px;
+					}
+					.review_people-descr{
+						padding-left:31px ;
+						h2{
+							font-size: 14px;
+							}
+						h3{
+							font-size: 12px;
+							}
+						span{
+							margin-top: 5px;
+							display: block;
+							font-weight: 300;
+							font-size: 13px;
+							line-height: 18px;
+							color: #0D0D0D;
+							}
+					}
+
+				}
+			}
+		}
+
+
+	}	
+
 }
 @media (max-width: 575px){
 	.consultation{
@@ -327,4 +478,83 @@
 			width: 270px;
 		}
 	}
+	.carousel{
+		margin-top: -30px;
+		height: 350px;
+		.container{
+			width: 280px;
+		}
+		.carousel__inner{
+			position: relative;
+			width: 250px;
+			img{
+				width: 100%;
+			}
+		}
+	}
+	.catalog{
+		.title{
+			font-size: 18px;
+			margin-bottom: -40px;
+		}
+		.catalog__tabs{
+			.catalog__tab{
+				width: 90px;
+				height: 25px;
+				font-size: 9px;
+				line-height: 22px;
+			}
+		}
+		.catalog__content{
+			.catalog-item{
+				width: 280px;
+			}
+		}
+	}
+	.review{
+		.container{
+			width: 280px;
+			.title{
+				font-size: 18px;
+				margin-top: -30px;
+			}
+			.review__peoples{
+				width: 280px;
+				margin-top: 10px;
+				.review_people{
+					margin-bottom: 30px;
+					flex-direction: column;
+					img{
+						width: 100px;
+            			height: 100px;
+						margin: 0 auto;
+				
+						
+					}
+					.review_people-descr{
+						padding-left:0;
+						margin-top: 20px;
+						h2{
+							font-size: 12px;
+							text-align: center;
+							}
+						h3{
+							font-size: 10px;
+							text-align: center;
+							}
+						span{
+							margin-top: 5px;
+							display: block;
+							font-weight: 300;
+							font-size: 11px;
+							line-height: 12px;
+							color: #0D0D0D;
+							text-align: start;
+							}
+					}
+
+				}
+			}
+		}
+	}	
 }
