--- a/src/sass/blocks/_second.scss
+++ b/src/sass/blocks/_second.scss
@@ -34,7 +34,7 @@
 		}
         span{
             margin-top: 20px;
-            display: block;
+            // display: block;
             font-weight: 300;
             font-size: 14px;
             line-height: 18px;
