--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -31,4 +31,28 @@
              
         }
     }
+   
+    .slick-dots {
+        margin: 0 auto;
+        width: 150px;
+        li {
+            position: relative;
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            margin: 0 5px;
+            padding: 0 ;
+            button {
+                font-size: 0;
+                width: 20px;
+                height: 20px;
+                border-radius: 100%;
+                border:none;
+            }
+        }    
+
+    }
+    .slick-active button{
+        background-color: red;
+    }
 }
