--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -39,7 +39,13 @@
 
 	}
 	&__content{
-	margin-top: 60px;
+		margin-top: 60px;
+		display: none;
+		justify-content: space-between;
+		flex-wrap: wrap;
+		&_active {
+			display: flex;
+		}
 	}
 	&-item{
 		width: 303px;
@@ -47,6 +53,7 @@
 		border: 2px solid #e8e8e8;
 		padding: 20px 20px 26px 20px;  
 		overflow: hidden;
+		margin-bottom: 20px;
 		&__img{
 			max-width: 100%;
 			height: 200px;
@@ -74,6 +81,7 @@
 			font-size: 14px;
 			color: $main-color;
 			text-align: center;
+			text-transform: uppercase;
 			&:hover{
 				color: $main-color;
 			}
@@ -116,12 +124,13 @@
 			}
 		}
 		&__list{
+			position: relative;
 			width: 50%;
 			margin-left: 20px;
 			transform: translateX(0%);
 			padding-right: 20px;
 			transition: 0.5s all;
-			padding-left: 0;
+			padding-left: 19px;
 			margin-bottom: 0;
 			list-style-type: none;
 			&_active{
@@ -129,10 +138,36 @@
 				margin-left: 0px;
 			}
 			li {
+				position: relative;
 				font-weight: 300;
 				font-size: 14px;
 				color: #555555;
 				margin-bottom: 20px;
+				&:before{
+					content: '';
+					position: absolute;
+					width: 5px;
+					height: 5px;
+					background-color: $main-color;
+					left: -19px;
+					top: 7px;
+
+				}
+			}
+		}
+		&__back{
+			position: absolute;
+			bottom: 0;
+			left: 50%;
+			transform: translateX(calc(-50% - 19px));
+			display: block;
+			color: $main-color;
+			font-size: 14px;
+			font-weight: 500;
+			text-decoration: underline;
+			text-transform: uppercase;
+			&:hover{
+				color: $main-color;
 			}
 		}
 	}
