--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,11 +1,11 @@
 @import 'base/variables';
 @import 'base/media.scss';
 *{
-    font-family: 'Museo Sans Cyrl', sans-serif;
+	font-family: 'Museo Sans Cyrl', sans-serif;
 }
 .container{
-    max-width: 950px;
-    margin: 0 auto;
+	max-width: 950px;
+	margin: 0 auto;
 }
 @import 'blocks/promo';
 @import 'blocks/header.scss';
@@ -16,4 +16,5 @@
 @import 'blocks/forms';
 @import 'blocks/carousel';
 @import 'blocks/catalog';
+@import 'blocks/review';
 
