--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -8,4 +8,12 @@
         line-height: 30px;
         color: #FFFFFF;
     }
+    .error{
+        border:1px solid red;
+    }
+    label.error{
+        color:white;
+        border:none;
+        text-align: center;
+    }
 }
