--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -1,19 +1,19 @@
 .consultation{
-    max-height: 680px;
-    padding: 100px 0 92px 0;
-    background: url(../../img/bg2.png) center (center/cover) no-repeat;
-    &__descr{
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 30px;
-        color: #FFFFFF;
-    }
-    .error{
-        border:1px solid red;
-    }
-    label.error{
-        color:white;
-        border:none;
-        text-align: center;
-    }
+	max-height: 680px;
+	padding: 100px 0 92px 0;
+	background: url(../img/bg2.png) center (center/cover) no-repeat;
+	&__descr{
+		font-weight: 500;
+		font-size: 20px;
+		line-height: 30px;
+		color: #FFFFFF;
+	}
+	.error{
+		border:1px solid red;
+	}
+	label.error{
+		color:white;
+		border:none;
+		text-align: center;
+	}
 }
