--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,6 @@
 @import 'base/variables';
 @import 'base/media.scss';
+@import 'base/animations.scss';
 *{
 	font-family: 'Museo Sans Cyrl', sans-serif;
 }
@@ -19,3 +20,4 @@
 @import 'blocks/review';
 @import 'blocks/footer';
 @import 'blocks/modal';
+@import 'blocks/pageup';
